ADD - Project Setup Complete. Up Next, Implement coding challange

--- a/app/package.json
+++ b/app/package.json
@@ -2,10 +2,13 @@
   "name": "buycoins-frontend-challange",
   "version": "1.0.0",
   "description": "",
-  "main": "githubGrapql.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
